--- a/frontend/style.css
+++ b/frontend/style.css
@@ -21,3 +21,77 @@
 .setFont{
    font-size: 17px;
 }
+.message{
+    color: #22bd22;
+   
+    padding: 3px;
+
+}
+#product{
+    margin-left: 5.78em;
+    display: none;
+}
+#party{
+    margin-left: 4.5em;
+    display: none;
+}
+#assign{
+    display: none;
+}
+#productRate{
+    display: none;
+}
+#invoice{
+    display: none;
+}
+.conform{
+    margin-top: 2px;
+    /* display: none; */
+}
+#delMessage{
+font-size: 20px;
+}
+
+.modalPopup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.25);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+.modal-contentPopup {
+    position: absolute;
+    top: 6em;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 1rem 1.5rem;
+    width: 26rem;
+    border-radius: 0.5rem;
+}
+.close-buttonPopup {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: lightgray;
+}
+.close-buttonPopup:hover {
+    background-color: darkgray;
+}
+.show-modalPopup {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+.btnConfirn{
+    margin-right: 13px;
+}
