--- a/frontend/style.css
+++ b/frontend/style.css
@@ -66,7 +66,8 @@ font-size: 20px;
 }
 .modal-contentPopup {
     position: absolute;
-    top: 6em;
+    /* top: 6em; */
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
@@ -87,6 +88,8 @@ font-size: 20px;
     background-color: darkgray;
 }
 .show-modalPopup {
+    /* display: flex;
+    align-items: center; */
     opacity: 1;
     visibility: visible;
     transform: scale(1.0);
